[tool.poetry]
name = "hukchallenge"
version = "0.1.0"
description = ""
authors = ["Christian Rubba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
imbalanced-learn = "^0.12.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
